fixed issues with gravel

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,5 +1,11 @@
 [item-name]
 ore-clay=Clay
+ore-gravel=Gravel
 
 [entity-name]
-ore-clay=Clay Patch
+ore-clay=Clay
+ore-gravel=Gravel
+
+[autoplace-control-names]
+ore-clay=Clay
+ore-gravel=Gravel
