Working on coke oven line added sand, unfired coke oven brick, coke oven brick

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,11 +1,17 @@
 [item-name]
 ore-clay=Clay
 ore-gravel=Gravel
+ore-sand=Sand
+unfired-brick-coke=Coke oven brick (unfired)
+brick-coke=Coke oven brick
+coke-oven=Coke oven
 
 [entity-name]
 ore-clay=Clay
 ore-gravel=Gravel
+ore-sand=Sand
 
 [autoplace-control-names]
 ore-clay=Clay
 ore-gravel=Gravel
+ore-sand=Sand
