added coke oven building

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -2,9 +2,11 @@
 ore-clay=Clay
 ore-gravel=Gravel
 ore-sand=Sand
+
+flint=Flint
 unfired-brick-coke=Coke oven brick (unfired)
 brick-coke=Coke oven brick
-coke-oven=Coke oven
+coke-oven-basic=Coke oven
 
 [entity-name]
 ore-clay=Clay
