coke oven is now placable

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -12,6 +12,7 @@ coke-oven-basic=Coke oven
 ore-clay=Clay
 ore-gravel=Gravel
 ore-sand=Sand
+coke-oven-basic=Coke oven
 
 [autoplace-control-names]
 ore-clay=Clay
