fixed major problems with previous commit, things are coming together nicely so far!

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -7,6 +7,12 @@ flint=Flint
 unfired-brick-coke=Coke oven brick (unfired)
 brick-coke=Coke oven brick
 coke-oven-basic=Coke oven
+brick=Brick
+unfired-brick=Brick (unfired)
+rod-wood=Wooden rod
+gear-wood=Wooden gear
+plank-wood=Wooden plank
+
 
 [entity-name]
 ore-clay=Clay
