Added burner lab to process stone tech

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -13,14 +13,22 @@ rod-wood=Wooden rod
 gear-wood=Wooden gear
 plank-wood=Wooden plank
 
+coke=Coke
+charcoal=Charcoal
+
+[fluid-name]
+creosote=Creosote
+
 
 [entity-name]
 ore-clay=Clay
 ore-gravel=Gravel
 ore-sand=Sand
 coke-oven-basic=Coke oven
+burner-lab=Burner lab
 
 [autoplace-control-names]
 ore-clay=Clay
 ore-gravel=Gravel
 ore-sand=Sand
+
