dynamic adding of ingots and dusts

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -11,7 +11,10 @@ brick=Brick
 unfired-brick=Brick (unfired)
 rod-wood=Wooden rod
 gear-wood=Wooden gear
-plank-wood=Wooden plank
+
+
+plate-wood=Wooden plank
+plate-tin=Tin plate
 
 coke=Coke
 charcoal=Charcoal
