changed naming convention to match vanilla factorio also you can not have recipes with the same name Smelting recipes for ingots has been made

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,7 +1,7 @@
 [item-name]
-ore-clay=Clay
-ore-gravel=Gravel
-ore-sand=Sand
+clay-ore=Clay
+gravel-ore=Gravel
+sand-ore=Sand
 
 flint=Flint
 unfired-brick-coke=Coke oven brick (unfired)
@@ -9,12 +9,12 @@ brick-coke=Coke oven brick
 coke-oven-basic=Coke oven
 brick=Brick
 unfired-brick=Brick (unfired)
-rod-wood=Wooden rod
-gear-wood=Wooden gear
+wood-rod=Wooden rod
+wood-gear=Wooden gear
 
 
-plate-wood=Wooden plank
-plate-tin=Tin plate
+wood-plate=Wooden plank
+tin-plate=Tin plate
 
 coke=Coke
 charcoal=Charcoal
@@ -24,14 +24,14 @@ creosote=Creosote
 
 
 [entity-name]
-ore-clay=Clay
-ore-gravel=Gravel
-ore-sand=Sand
+clay-ore=Clay
+gravel-ore=Gravel
+sand-ore=Sand
 coke-oven-basic=Coke oven
 burner-lab=Burner lab
 
 [autoplace-control-names]
-ore-clay=Clay
-ore-gravel=Gravel
-ore-sand=Sand
+clay-ore=Clay
+gravel-ore=Gravel
+sand-ore=Sand
 
