added rods and gear wheels

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -9,15 +9,39 @@ brick-coke=Coke oven brick
 coke-oven-basic=Coke oven
 brick=Brick
 unfired-brick=Brick (unfired)
-wood-rod=Wooden rod
 wood-gear=Wooden gear
-
-
-wood-plate=Wooden plank
-tin-plate=Tin plate
 
 coke=Coke
 charcoal=Charcoal
+
+bronze-plate=Bronze plate
+tin-plate=Tin plate
+wood-plate=Wooden plank
+
+bronze-ingot=Bronze ingot
+tin-ingot=Tin ingot
+copper-ingot=Copper ingot
+iron-ingot=Iron ingot
+
+copper-rod=Copper rod
+bronze-rod=Bronze rod
+iron-rod=Iron rod
+tin-rod=Tin rod
+wood-rod=Wooden rod
+
+copper-dust=Copper dust
+bronze-dust=Bronze dust
+iron-dust=Iron dust
+tin-dust=Tin dust
+
+[recipe-name]
+copper-ingot-from-ore=Copper ingot
+copper-ingot-from-dust=Copper ingot
+iron-ingot-from-ore=Iron ingot
+iron-ingot-from-dust=Iron ingot
+tin-ingot-from-ore=Tin ingot
+tin-ingot-from-dust=Tin ingot
+
 
 [fluid-name]
 creosote=Creosote
