--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,8 @@
     "Lua.workspace.userThirdParty": [
         "c:\\Users\\sans3\\AppData\\Roaming\\Code\\User\\workspaceStorage\\3b6fb460bd999ddd564173e6be1b2fcf\\justarandomgeek.factoriomod-debug\\sumneko-3rd"
     ],
-    "Lua.workspace.checkThirdParty": "ApplyInMemory"
+    "Lua.workspace.checkThirdParty": "ApplyInMemory",
+    "cSpell.words": [
+        "Actunite"
+    ]
 }
