--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -2,6 +2,20 @@
 clay-ore=Clay
 gravel-ore=Gravel
 sand-ore=Sand
+redstone-ore=Redstone ore
+cassiterite-ore=Cassiterite ore
+banded-iron-ore=Banded iron ore
+brown-limonite-ore=Brown limonite ore
+yellow-limonite-ore=Yellow limonite ore
+malachite-ore=Malachite ore
+cassiterite-sand-ore=Cassiterite sand ore
+chalcopyrite-ore=Chalcopyrite ore
+pyrite-ore=Pyrite ore
+cinnabar-ore=Cinnabar ore
+diamond-ore=Diamond ore
+graphite-ore=Graphite ore
+ruby-ore=Ruby ore
+
 
 flint=Flint
 unfired-brick-coke=Coke oven brick (unfired)
@@ -33,14 +47,15 @@ copper-dust=Copper dust
 bronze-dust=Bronze dust
 iron-dust=Iron dust
 tin-dust=Tin dust
+redstone-dust=Actunite dust
 
 [recipe-name]
-copper-ingot-from-ore=Copper ingot
-copper-ingot-from-dust=Copper ingot
-iron-ingot-from-ore=Iron ingot
-iron-ingot-from-dust=Iron ingot
-tin-ingot-from-ore=Tin ingot
-tin-ingot-from-dust=Tin ingot
+copper-ingot-from-ore=Copper ingot from ore
+copper-ingot-from-dust=Copper ingot from dust
+iron-ingot-from-ore=Iron ingot from ore
+iron-ingot-from-dust=Iron ingot from dust
+tin-ingot-from-ore=Tin ingot from ore
+tin-ingot-from-dust=Tin ingot from dust
 
 
 [fluid-name]
