trying to use gitignore and added animal pen with cow breeding recipe

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -2,6 +2,7 @@
 clay-ore=Clay
 gravel-ore=Gravel
 sand-ore=Sand
+tin-ore=Tin ore
 redstone-ore=Redstone ore
 cassiterite-ore=Cassiterite ore
 banded-iron-ore=Banded iron ore
@@ -66,6 +67,8 @@ creosote=Creosote
 clay-ore=Clay
 gravel-ore=Gravel
 sand-ore=Sand
+tin-ore=Tin ore
+
 coke-oven-basic=Coke oven
 burner-lab=Burner lab
 
