Added more textures and locale entries Added a sieve and surface excavator(unused) tech for animals cow breeding works

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -21,7 +21,6 @@ ruby-ore=Ruby ore
 flint=Flint
 unfired-brick-coke=Coke oven brick (unfired)
 brick-coke=Coke oven brick
-coke-oven-basic=Coke oven
 brick=Brick
 unfired-brick=Brick (unfired)
 wood-gear=Wooden gear
@@ -49,6 +48,27 @@ bronze-dust=Bronze dust
 iron-dust=Iron dust
 tin-dust=Tin dust
 redstone-dust=Actunite dust
+coal-dust=Coal dust
+
+copper-gear-wheel=Copper gear wheel
+bronze-gear-wheel=Bronze gear wheel
+tin-gear-wheel=Tin gear wheel
+wood-gear-wheel=Wooden gear wheel
+
+gt-stone-science-pack=Stone science pack
+
+coke-oven-basic=Coke oven
+burner-lab=Burner lab
+animal-pen=Animal pen
+surface-excavator=Surface excavator
+sieve=Sieve
+
+cow=Cow
+baby-cow=Baby cow
+tired-cow=Tired cow
+
+wheat-seed=Wheat seed
+wheat=Wheat
 
 [recipe-name]
 copper-ingot-from-ore=Copper ingot from ore
@@ -57,6 +77,16 @@ iron-ingot-from-ore=Iron ingot from ore
 iron-ingot-from-dust=Iron ingot from dust
 tin-ingot-from-ore=Tin ingot from ore
 tin-ingot-from-dust=Tin ingot from dust
+
+breed-cow=Breed cows
+slaughter-cow=Slaughter cow
+
+coke-oven-basic=Coke oven
+burner-lab=Burner lab
+animal-pen=Animal pen
+surface-excavator=Surface excavator
+sieve=Sieve
+
 
 
 [fluid-name]
@@ -71,9 +101,14 @@ tin-ore=Tin ore
 
 coke-oven-basic=Coke oven
 burner-lab=Burner lab
+animal-pen=Animal pen
+surface-excavator=Surface excavator
+sieve=Sieve
 
 [autoplace-control-names]
 clay-ore=Clay
 gravel-ore=Gravel
 sand-ore=Sand
+animals=Animals
+tin-ore=Tin ore
 
